--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2>Our Team</h2>
         <div>
           <img
-            src="./İmages/Mark Guerrero.jpg"
+            src="./İmages/Mark-Guerrero.jpg"
             alt="Mark Guerrero"
             width="264"
             height="260"
@@ -70,9 +70,10 @@
           <h4>Mark Guerrero</h4>
           <p>Product Designer</p>
         </div>
+
         <div>
           <img
-            src="./İmages/Tom Ford.jpg"
+            src="./İmages/Tom-Ford.jpg"
             alt="Tom Ford"
             width="264"
             height="260"
@@ -80,9 +81,10 @@
           <h4>Tom Ford</h4>
           <p>Frontend Developer</p>
         </div>
+
         <div>
           <img
-            src="./İmages/Camila Garcia.jpg"
+            src="./İmages/Camila-Garcia.jpg"
             alt="Camila Garcia"
             width="264"
             height="260"
@@ -90,9 +92,10 @@
           <h4>Camila Garcia</h4>
           <p>Marketing</p>
         </div>
+
         <div>
           <img
-            src="./İmages/Daniel Wilson.jpg"
+            src="./İmages/Daniel-Wilson.jpg"
             alt="Daniel Wilson"
             width="264"
             height="260"
